tests/snapshots/visual_mode_test__v_with_w_motion.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:6
Lines: 1

Buffer:
hello [w]orld test
