tests/snapshots/visual_mode_test__v_with_zero.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:0
Lines: 1

Buffer:
[h]ello world
