tests/snapshots/visual_mode_test__v_yank_selection.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:16
Lines: 1

Buffer:
hello worldhello[ ]
